# tomris-lab1

./: .gitignore  CMakeLists.txt  division.c  division.h  image.c  image.h  main.c  subtraction.c  subtraction.h  userIO.c  userIO.h  utils.c  utils.h
